--- a/pet-clinic-web/src/main/resources/templates/owners/createOrUpdateOwnerForm.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/createOrUpdateOwnerForm.html
@@ -1,4 +1,6 @@
-<html xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'owners')}">
+<html xmlns:th="http://www.thymeleaf.org"
+      th:replace="~{fragments/layout :: layout (~{::body},'owners')}">
+
 <body>
 
 <h2>Owner</h2>
@@ -12,14 +14,12 @@
     </div>
     <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-            <button th:with="text=${owner['new']} ? 'Add Owner' : 'Update Owner'" class="btn btn-default" type="submit"
-                    th:text="${text}">Add Owner
-            </button>
+            <button th:with="text=${owner['new']} ? 'Add Owner' : 'Update Owner'" class="btn btn-default" type="submit" th:text="${text}">Add Owner</button>
+            <!--
+            <button class="btn btn-default">Add Owner</button>
+            -->
         </div>
     </div>
 </form>
-</body>
-</html>
-
 </body>
 </html>
