--- a/pet-clinic-web/src/main/resources/templates/fragments/inputField.html
+++ b/pet-clinic-web/src/main/resources/templates/fragments/inputField.html
@@ -11,7 +11,7 @@
                 <input th:case="'text'" class="form-control" type="text" th:field="*{__${name}__}" />
                 <input th:case="'date'" class="form-control" type="text" th:field="*{__${name}__}"
                         placeholder="YYYY-MM-DD" title="Enter a date in this format: YYYY-MM-DD"
-                        pattern="(?:19|20)[0-9]{2}-(?:(?:0[1-9]|1[0-2])-(?:0[1-9]|1[0-9]|2[0-9])|(?:(?!02)(?:0[1-9]|1[0-2])-(?:30))|(?:(?:0[13578]|1[02])-31))"/>
+                        pattern="^\d{4}\-(0[1-9]|1[012])\-(0[1-9]|[12][0-9]|3[01])$"/>
             </div>
           <span th:if="${valid}"
             class="glyphicon glyphicon-ok form-control-feedback"
